Kubernetes-Manifests-file/overlays/prod/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-prod-ingress

spec:
  ingressClassName: nginx

  rules:

  - host: vote.voting.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 5000


  - host: result.voting.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 4000
